last working version before commit

--- a/MiniscopeAnimalParam.ipynb
+++ b/MiniscopeAnimalParam.ipynb
@@ -20,7 +20,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "session =  r\"\\\\iss\\karalis\\users\\nikolas.karalis\\Data\\FMI\\Neuromod\\nk50\\nk50_s06_fc_ctxretr\\20_14_03\\My_V4_Miniscope\"    # this is where you should store your dataset of videos"
+    "session =  r\"\\\\iss\\karalis\\users\\nikolas.karalis\\Data\\FMI\\Neuromod\\nk63\\nk63_s02_rew_closed_loop\\2021_09_05\\15_25_26\\My_V4_Miniscope\"    # this is where you should store your dataset of videos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pattern_vid = \"\\.avi$\""
    ]
   },
   {
@@ -269,7 +278,7 @@
     "# Pre-processing Parameters#\n",
     "param_load_videos = {\n",
     "#############     HERE     #############\n",
-    "    \"pattern\": \"\\.avi$\",#r\"^(1[1-9])\\.avi$\",#\"1.avi\",#r\"^(0|[1-9]|1[0-5])\\.avi$\",#\"[0-9]+\\.avi$\",#\"blabla.avi\",#\"msCam[0-9]+\\.avi$\",\n",
+    "    \"pattern\": pattern_vid,\n",
     "########################################\n",
     "    \"dtype\": np.uint8,\n",
     "    \"downsample\": dict(frame=1, height=1, width=1),\n",
@@ -495,7 +504,7 @@
    "source": [
     "varr = load_videos(dpath, **param_load_videos)\n",
     "chk, _ = get_optimal_chk(varr,csize = 512,  dtype=float)\n",
-    "chk['frame'] = 50\n",
+    "#chk['frame'] = 50\n",
     "vlist = [dpath + os.sep + v for v in os.listdir(dpath) if re.search(param_load_videos['pattern'], v)]\n",
     "print(colored(\"loading {} videos \".format(len(vlist)), 'red'), file = open(\"CON\", \"w\") )\n",
     "print(colored(\"______ VIDEOS LOADED ______\", \"yellow\"), file = open(\"CON\", \"w\") )"
@@ -515,20 +524,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## glow removal and visualization"
+    "varr"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "hv.output(size=output_size)\n",
-    "if interactive:\n",
-    "    vaviewer = VArrayViewer(varr, framerate=20, summary=[\"mean\", \"max\"])\n",
-    "    display(vaviewer.show())"
+    "## glow removal and visualization"
    ]
   },
   {
@@ -551,7 +559,7 @@
     "    im = ax.imshow(varr.sel(frame = i), cmap=cmap, vmin=vmin, vmax=vmax)\n",
     "    ax.set_title(f\"Frame {i+1}\")\n",
     "    ax.axis('off')  # Hide empty subplots\n",
-    "    #contrasts.append(np.max(varr.sel(frame = i).values) -np.min(varr.sel(frame = i).values))\n",
+    "    contrasts.append(np.max(varr.sel(frame = i).values) -np.min(varr.sel(frame = i).values))\n",
     "\n",
     "\n",
     "plt.suptitle(\"4x4 Heatmaps with Shared Colorbar\", fontsize=16)\n",
@@ -564,8 +572,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "varr_ref = varr.sel(subset) \n",
-    "varr_min = varr_ref.sel(frame=slice(5, len(varr.frame)-1)).min(\"frame\").compute()\n",
+    "\n",
+    "thresh = min(contrasts) + (max(contrasts) - min(contrasts))*0.8\n",
+    "first_peak_index = np.where(contrasts > thresh)[0][0]\n",
+    "print(first_peak_index+1 , 'th frame is the first valid one')\n",
+    "\n",
+    "varr_min = varr_ref.sel(frame=slice(first_peak_index, len(varr.frame)-1)).min(\"frame\").compute()\n",
     "varr_ref = varr_ref - varr_min\n",
     "\n",
     "print(colored(\"______ PREPROCESSING ... ______\", \"light_yellow\"), file = open(\"CON\", \"w\") )"
@@ -594,7 +608,7 @@
     "hv.output(size=int(output_size * 0.7))\n",
     "if interactive:\n",
     "    vaviewer = VArrayViewer(\n",
-    "        [varr.rename(\"original\").sel(frame=slice(1000, len(varr.frame)-1)), varr_ref.rename(\"glow_removed\").sel(frame=slice(1000, len(varr.frame)-1))],\n",
+    "        [varr.rename(\"original\").sel(frame=slice(500, len(varr.frame)-1)), varr_ref.rename(\"glow_removed\").sel(frame=slice(500, len(varr.frame)-1))],\n",
     "        framerate=20,\n",
     "        summary=None,\n",
     "        layout=True,\n",
@@ -649,7 +663,7 @@
     "if interactive:\n",
     "    display(\n",
     "        visualize_preprocess(\n",
-    "            varr_ref.isel(frame=2000).compute(),\n",
+    "            varr_ref.isel(frame=500).compute(),\n",
     "            denoise,\n",
     "            method=[\"median\"],\n",
     "            ksize=[5, 7, 9,11,13],\n",
@@ -756,7 +770,7 @@
     "if interactive:\n",
     "    display(\n",
     "        visualize_preprocess(\n",
-    "            varr_ref.isel(frame=3000).compute(),\n",
+    "            varr_ref.isel(frame=500).compute(),\n",
     "            remove_background,\n",
     "            method=[\"tophat\"],\n",
     "            wnd=[10, 15, 20],\n",
@@ -881,31 +895,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": [
-     "tutorial"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "param_save_minian"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": [
-     "tutorial"
-    ]
-   },
-   "source": [
-    "As mentioned before `param_save_minian` decides how your data will be saved and what metadata will be stored.\n",
-    "Additionally we use the `chk` variable earlier to make sure all our data have same chunk size along same dimension."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -931,15 +920,6 @@
    "source": [
     "Y = apply_transform(varr_ref, motion, fill=0)\n",
     "print(colored(\"______ PREPROCESSING DONE ______\", \"yellow\"), file = open(\"CON\", \"w\") )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(Y.sel(frame = 4000))"
    ]
   },
   {
@@ -978,6 +958,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "## generate video for motion-correction"
    ]
   },
@@ -1039,7 +1020,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#FIX THRESHOLD HARD CODED"
+    "plt.imshow(max_proj)"
    ]
   },
   {
@@ -1048,17 +1029,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(Y.sel(frame = 4000))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#threshold = (Y_fm_chk.mean() + 100 * Y_fm_chk.std()).values\n",
-    "threshold = 80.0\n",
+    "threshold = np.quantile(max_proj, 0.999)\n",
     "print(threshold)"
    ]
   },
@@ -1068,9 +1039,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "masked_array = xr.where(Y_fm_chk <= threshold, Y_fm_chk, np.nan)\n",
-    "frame_max = masked_array.min(dim=(\"width\", \"height\"), skipna=True).compute()\n",
-    "Y_fm_chk = xr.where(masked_array.notnull(), masked_array, frame_max)"
+    "2.5*np.quantile(max_proj, 0.99)"
    ]
   },
   {
@@ -1079,14 +1048,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# FIX THE VIDEO THING"
+    "if threshold >=2.5* np.quantile(max_proj, 0.99): \n",
+    "    #Y_fm_chk = xr.where(Y_fm_chk <= threshold, Y_fm_chk,0)\n",
+    "    masked_array = xr.where(Y_fm_chk <= threshold, Y_fm_chk, np.nan)\n",
+    "    frame_max = masked_array.min(dim=(\"width\", \"height\"), skipna=True).compute()\n",
+    "    Y_fm_chk = xr.where(masked_array.notnull(), masked_array, frame_max)"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "write_video( varr, \"processedvid.mp4\",param_save_minian['dpath'])"
+    "plt.imshow(Y_fm_chk.max(dim=\"frame\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Y_fm_chk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write_video( Y_fm_chk, \"processedvideo.mp4\",param_save_minian['dpath'])"
    ]
   },
   {
@@ -1116,17 +1109,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# FIX THE Values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "param_seeds_init['wnd_size'] = 7000#20000\n",
-    "param_seeds_init['stp_size'] = 3000#15000"
+    "param_seeds_init['wnd_size'] = int(10000*np.round(np.shape(varr)[0]/1000)/20)\n",
+    "param_seeds_init['stp_size'] = int(0.75*param_seeds_init['wnd_size'])"
    ]
   },
   {
@@ -1136,6 +1120,15 @@
    "outputs": [],
    "source": [
     "seeds = seeds_init(Y_fm_chk, **param_seeds_init)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chk"
    ]
   },
   {
@@ -1156,22 +1149,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "max_proj = Y_fm_chk.max(\"frame\").rename(\"max_proj\").compute()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(max_proj)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### filter seeds on video artefact"
    ]
   },
@@ -1181,17 +1158,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bins = np.arange(0, len(varr.height)-1, 1)\n",
-    "counts, bin_edges = np.histogram(seeds.height.values, bins)\n",
-    "s = pd.Series(counts)\n",
-    "\n",
-    "window_size = 10\n",
-    "rolling_mean = s.rolling(window_size, center = True).mean().fillna(0)\n",
-    "\n",
-    "threshold_height = 3*np.std(counts)+rolling_mean\n",
-    "\n",
-    "height_out = np.where(counts > threshold_height)\n",
-    "print(height_out)"
+    "max_proj = Y_fm_chk.max(dim=\"frame\")\n",
+    "plt.imshow(max_proj)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_proj = save_minian(\n",
+    "    Y_fm_chk.max(dim=\"frame\").rename(\"max_proj\"), **param_save_minian\n",
+    ").compute()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quant =  np.quantile(max_proj, 0.2, axis = 1)\n",
+    "height_out = np.where (quant > np.quantile(quant, 0.75))"
    ]
   },
   {
@@ -1219,8 +1208,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "hv.output(size=output_size)\n",
+    "visualize_seeds(Y_fm_chk.max(dim=\"frame\"), seeds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%skip_cell\n",
+    "height_out[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "seeds['is_artefact'] = False\n",
-    "seeds['is_artefact'] = seeds['width'].isin(np.concatenate((width_out[0] ,width_out[0]+1,width_out[0]-1))) | seeds['height'].isin(np.concatenate((height_out[0] ,height_out[0]+1,height_out[0]-1)))\n",
+    "seeds['is_artefact'] = seeds['width'].isin(np.concatenate((width_out[0] ,width_out[0]+1,width_out[0]-1))) | seeds['height'].isin(height_out[0])\n",
     "\n",
     "seeds = seeds[seeds['is_artefact'] == False]"
    ]
@@ -1235,11 +1244,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "hv.output(size=output_size)\n",
-    "visualize_seeds(max_proj, seeds)"
+    "visualize_seeds(Y_fm_chk.max(dim=\"frame\"), seeds)"
    ]
   },
   {
@@ -1255,7 +1266,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%skip_cell\n",
     "\n",
     "#%%time\n",
     "if interactive:\n",
@@ -1414,24 +1424,6 @@
     ]
    },
    "source": [
-    "First we filter the temporal activities for each seed using the `noise_freq` we choose.\n",
-    "**signal** is defined as the low-pass filtered temporal signal, while **noise** is high-pass filtered signal.\n",
-    "Then we compute the peak-to-peak value (max minus min) for both the **real** signal and **noise** signal.\n",
-    "The peak-noise-ratio is defined as the ratio between the peak-to-peak value of **signal** and that of **noise**.\n",
-    "We then threshold the seeds based on this peak-noise-ratio, with the assumption that temporal activities from real cells should have higher fluctuation in the low-frequency range and lower fluctuation in the high-frequency range.\n",
-    "`thres` is the threshold for peak-noise-ratios.\n",
-    "Pragmatically `thres=1` works fine and makes sense.\n",
-    "You can also use `thres=\"auto\"`, where a gaussian mixture model with 2 components will be run on the peak-noise-ratios and seeds will be selected if they belong to the \"higher\" gaussian."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": [
-     "tutorial"
-    ]
-   },
-   "source": [
     "<div class=\"alert alert-info\">\n",
     "\n",
     "If you see seeds being filtered out that you believe should be cells, either skip this step or try lower the threshold a bit.\n",
@@ -1553,10 +1545,7 @@
    "outputs": [],
    "source": [
     "#%%time\n",
-    "seeds_final = seeds[seeds[\"mask_ks\"] & seeds[\"mask_pnr\"] & ~seeds[\"is_artefact\"]].reset_index(drop=True)\n",
-    "# seeds_final = seeds[seeds[\"mask_ks\"] & seeds[\"mask_pnr\"]].reset_index(drop=True)\n",
-    "\n",
-    "# seeds_final[0:400]"
+    "seeds_final = seeds[seeds[\"mask_ks\"] & seeds[\"mask_pnr\"] & ~seeds[\"is_artefact\"]].reset_index(drop=True)"
    ]
   },
   {
@@ -2138,25 +2127,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "tags": [
-     "tutorial"
-    ]
-   },
+   "metadata": {},
    "source": [
-    "When carrying out spatial update, it is very inefficient to estimate a weight for all the cells for each pixel.\n",
-    "Instead, when updating for each pixel, we only want to consider cells that are close by and ignore cells that are very far from the pixel being updated.\n",
-    "For this purpose we carry out a [morphological dilation](https://homepages.inf.ed.ac.uk/rbf/HIPR2/dilate.htm) on the spatial footprints of each cell using the previous estimation of `A`.\n",
-    "We then binarize this dilated spatial footprints matrix and use it as a mask.\n",
-    "Then when updating for each pixel, only cells that have non-zero values in the mask on this pixel will be considered for update.\n",
-    "The parameter `dl_wnd` controls the window size of the morphological dilation operation.\n",
-    "\n",
-    "The scalar `sparse_penal` controls the balance between error objective and the l1-norm term.\n",
-    "The higher the `sparse_penal`, the sparser the result will become.\n",
-    "It is hard to estimate theoretically, and the best way to set this is through parameter exploration.\n",
-    "\n",
-    "Lastly, it is often convenient to filter out cells that has either too large or too small spatial footprints at this step.\n",
-    "The `size_thres` controls the range of area (number of non-zero pixels) of the spatial footprints that will be accepted."
+    "After obtaining a better estimation of spatial footprints, we update the background terms."
    ]
   },
   {
@@ -2175,13 +2148,6 @@
     "C_chk_new = save_minian(\n",
     "    (C_chk.sel(unit_id=mask) * norm_fac).rename(\"C_chk_new\"), intpath, overwrite=True\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "After obtaining a better estimation of spatial footprints, we update the background terms."
    ]
   },
   {
@@ -2245,6 +2211,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "### save results"
    ]
   },
@@ -3183,7 +3150,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%skip_cell\n",
     "hv.output(size=int(output_size * 0.6))\n",
     "if interactive:\n",
     "    sig = C_new + b0_new + c0_new\n",
@@ -3258,9 +3224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%skip_cell\n",
@@ -3545,6 +3509,13 @@
     "client.close()\n",
     "cluster.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
