cross_registration updates

--- a/cross-registration.ipynb
+++ b/cross-registration.ipynb
@@ -46,32 +46,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 471,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import sys\n",
+    "from termcolor import colored\n",
+    "import re\n",
     "minian_path = \".\"\n",
-    "dpath = \"./demo_data/\"\n",
-    "f_pattern = r\"minian.nc$\"\n",
-    "id_dims = [\"session\"]"
+    "\n",
+    "\n",
+    "session =  r\"C:\\Users\\axelle.piguet\\Documents\\GitHub\\klab_analysis\\Axelle\\nk50\"\n",
+    "\n",
+    "dpath = os.getenv(\"ANIMAL_PATH\", \"\")\n",
+    "if not dpath :\n",
+    "    dpath = session\n",
+    "\n",
+    "print(dpath, file = open(\"CON\", \"w\") )\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 472,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "minian_path = \".\"\n",
-    "dpath = \"./fake_dataset/nk56fake\"\n",
-    "f_pattern = r\"result$\" #r\"minian.nc$\"   # replace with what we put in the minian_ds_path in the other notebook\n",
-    "id_dims = [\"session\"]"
+    "# sampling frequency parameters \n",
+    "fs = 20\n",
+    "# Convert frame numbers to seconds\n",
+    "in_sec = 1 / fs\n",
+    "# Convert frame numbers to milliseconds\n",
+    "in_msec = 1000 / fs\n",
+    "# Convert frame numbers to minutes\n",
+    "in_min = 1 / (fs * 60)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mouse_name = re.search(r'nk[^\\\\]*', dpath).group(0)\n",
+    "\n",
+    "f_pattern = fr\"^{mouse_name}_s\"  # replace with what we put in the minian_ds_path in the other notebook\n",
+    "f_pattern = r\"result$\"\n",
+    "id_dims = [\"session\"]\n",
+    "print(dpath)\n",
+    "print(f_pattern)\n",
+    "print(id_dims)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "\n",
     "## specify parameters"
    ]
   },
@@ -85,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 473,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 474,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,13 +207,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f_pattern"
+    "print(dpath, file = open(\"CON\", \"w\") )\n",
+    "print(f_pattern, file = open(\"CON\", \"w\") )\n",
+    "print(id_dims, file = open(\"CON\", \"w\") )\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "minian_ds = open_minian_mf(\n",
@@ -209,38 +245,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "temps.values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "shifts.values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
+    "\n",
+    "\n",
     "temps = minian_ds['max_proj'].rename('temps')\n",
     "shifts = estimate_motion(temps, dim='session').compute().rename('shifts')\n",
     "temps_sh = apply_transform(temps, shifts).compute().rename('temps_shifted')\n",
     "shiftds = xr.merge([temps, shifts, temps_sh])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "shiftds"
    ]
   },
   {
@@ -260,7 +270,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "hv.output(size=int(output_size * 0.6))\n",
@@ -330,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 485,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 486,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 489,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,8 +486,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#all the units labels of session 1 and 2 in matching index\n",
-    "len(mappings_meta_fill['session', 'session1'].values)"
+    "mappings_meta_fill_save = mappings_meta_fill\n"
    ]
   },
   {
@@ -484,7 +495,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_unit = len(mappings_meta_fill['session', 'session1'].values)\n",
+    "mappings_meta_fill =mappings_meta_fill_save "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mappings_meta_fill[\"group\"] =mappings_meta_fill[\"group\"].astype(str)\n",
+    "mappings_meta_fill = mappings_meta_fill.sort_values(by=(\"group\",\"group\"), ascending = True).reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "# session_names = mappings_meta_fill.session.columns.values\n",
+    "num_unit = len(mappings_meta_fill['session', session_names[0]].values)\n",
     "num_session = len(minian_ds['S'].session.values)\n",
     "num_frames = len(minian_ds['S'].frame.values) \n",
     "data = np.empty((num_session,num_unit,num_frames ))\n",
@@ -501,7 +530,7 @@
     "\n",
     "\n",
     "\n",
-    "data_array = xr.DataArray(\n",
+    "data_arrayS = xr.DataArray(\n",
     "    data,\n",
     "    dims=[ \"session\",  \"new_unitId\", \"frame\"],  # Define dimension names\n",
     "    coords={  # Define coordinates\n",
@@ -519,7 +548,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "minian_ds['C']"
+    "session_names = mappings_meta_fill.session.columns.values\n",
+    "num_unit = len(mappings_meta_fill['session', session_names[0]].values)\n",
+    "num_session = len(minian_ds['S'].session.values)\n",
+    "num_frames = len(minian_ds['S'].frame.values) \n",
+    "data = np.empty((num_session,num_unit,num_frames ))\n",
+    "data[:] = np.nan\n",
+    "\n",
+    "ends = []\n",
+    "\n",
+    "for sess in range(num_session ) :\n",
+    "    \n",
+    "    sess_name = minian_ds['S'].session.values[sess]\n",
+    "    non_nan_indices = np.where(~np.isnan(mappings_meta_fill['session', sess_name].values))\n",
+    "    old_units = mappings_meta_fill['session', sess_name].values[non_nan_indices]\n",
+    "\n",
+    "    data[sess,non_nan_indices ,:] = minian_ds['S'].sel(unit_id = old_units, session = sess_name).values\n",
+    "    \n",
+    "    end_frame = np.where(~np.isnan(data[sess,non_nan_indices[0][0] ,:]))[0][-1]\n",
+    "    ends.append(end_frame)\n",
+    "    \n",
+    "starts = [0] * num_session\n",
+    "\n",
+    "\n",
+    "\n",
+    "data_arrayS = xr.DataArray(\n",
+    "    data,\n",
+    "    dims=[ \"session\",  \"new_unitId\", \"frame\"],  # Define dimension names\n",
+    "    coords={  # Define coordinates\n",
+    "        \"session\": minian_ds['S'].session.values,\n",
+    "        \"new_unitId\": np.linspace(1,num_unit, num =num_unit, dtype = int), # rows\n",
+    "        \"frame\": minian_ds['S'].frame.values\n",
+    "    },\n",
+    "    name= minian_ds['S'].animal.values,  # Optional: Name the data array\n",
+    ")\n",
+    "\n",
+    "data_arrayS.attrs[\"start_frame\"] =starts\n",
+    "data_arrayS.attrs[\"end_frame\"] =ends"
    ]
   },
   {
@@ -536,6 +601,7 @@
     "    \n",
     "    sess_name = minian_ds['C'].session.values[sess];\n",
     "    non_nan_indices = np.where(~np.isnan(mappings_meta_fill['session', sess_name].values))\n",
+    "\n",
     "    old_units = mappings_meta_fill['session', sess_name].values[non_nan_indices];\n",
     "    \n",
     "    data[sess,non_nan_indices ,:] = minian_ds['C'].sel(unit_id = old_units, session = sess_name).values\n",
@@ -551,7 +617,9 @@
     "        \"frame\": minian_ds['C'].frame.values\n",
     "    },\n",
     "    name= minian_ds['C'].animal.values,  # Optional: Name the data array\n",
-    ")"
+    ")\n",
+    "data_arrayC.attrs[\"start_frame\"] =starts\n",
+    "data_arrayC.attrs[\"end_frame\"] =ends"
    ]
   },
   {
@@ -564,16 +632,23 @@
     "plt.figure(figsize=(7, 15)) \n",
     "colors = ['palevioletred', 'purple']\n",
     "\n",
+    "begining = data_arrayC.start_frame[0]\n",
     "for sess in range(num_session ) :  \n",
     "    for idx in data_arrayC[\"new_unitId\"].values:\n",
-    "        plt.plot(range(sess*num_frames, num_frames*(sess+1)),data_arrayC.sel( new_unitId = idx, session = minian_ds['C'].session.values[sess]) + 6*idx,colors[sess%2])\n",
-    "      \n",
-    "plt.xlabel('Time')\n",
+    "        plt.plot(range(begining, begining + data_arrayC.end_frame[sess] ),data_arrayC.sel( new_unitId = idx, session = minian_ds['C'].session.values[sess])[data_arrayC.start_frame[sess]:data_arrayC.end_frame[sess]] + 15*idx,colors[sess%2])\n",
+    "    begining = begining + data_arrayC.end_frame[sess] +1\n",
+    "            \n",
+    "plt.xlabel('Time (min)')\n",
     "plt.ylabel('Units')\n",
     "plt.gca().spines['top'].set_visible(False)  # Hides the top spine\n",
     "plt.gca().spines['right'].set_visible(False)  # Hides the right spine\n",
-    "plt.gca().xaxis.set_ticks([])\n",
-    "plt.gca().set_xticklabels([]) "
+    "#plt.gca().xaxis.set_ticks([])\n",
+    "#plt.gca().set_xticklabels([]) \n",
+    "yticks = plt.gca().get_yticks()  # Get current y-axis tick values\n",
+    "plt.gca().set_yticklabels([f\"{int(tick /15)}\" for tick in yticks]) \n",
+    "xticks = plt.gca().get_xticks()  # Get current y-axis tick values\n",
+    "plt.gca().set_xticklabels([f\"{int(tick *in_min)}\" for tick in xticks]) \n",
+    "plt.savefig(os.path.join(dpath, \"C.png\"), format=\"png\", dpi=300)"
    ]
   },
   {
@@ -595,17 +670,27 @@
     "\n",
     "\n",
     "fig, ax = plt.subplots()\n",
-    "fig.figsize=(10, 25) \n",
-    "for sess in range(num_session ) :  \n",
-    "    #color =  LinearSegmentedColormap.from_list(\"white_to_red\", [\"white\", [random.uniform(0.3, 0.7) for _ in range(3)]])\n",
-    "    color =  LinearSegmentedColormap.from_list(\"white_to_red\", [\"white\", intercolors[sess%2], colors[sess%2]])\n",
-    "    ax.imshow(data_array.sel( session = minian_ds['S'].session.values[sess]), cmap=color, extent=[sess*num_frames, num_frames*(sess+1)-1, 0, num_unit], origin='lower', aspect = 'auto')#,norm=LogNorm(vmin=np.nanmin(data_array.values)+0.0001, vmax=np.nanmax(data_array.values)))\n",
+    "fig.figsize=(15, 25)\n",
+    "\n",
+    "begining = data_arrayS.start_frame[0]\n",
+    "for sess in range(num_session ) :\n",
     "    \n",
-    "ax.set_xlim(0, num_session*num_frames)\n",
-    "plt.xlabel('Frames')\n",
+    "    #color =  LinearSegmentedColormap.from_list(\"white_to_red\", [\"white\", [random.uniform(0.3, 0.7) for _ in range(3)]])\n",
+    "    color =  LinearSegmentedColormap.from_list(\"white_to_red\", [\"grey\", \"black\"])#, intercolors[sess%2], colors[sess%2]])\n",
+    "    color =  LinearSegmentedColormap.from_list(\"white_to_black\", [\"white\", [.3,.3,.3] ,[.2,.2,.2],[.1,.1,.1], \"black\"])\n",
+    "    ax.imshow(data_arrayS.sel( session = minian_ds['S'].session.values[sess])[:,data_arrayS.start_frame[sess]:data_arrayS.end_frame[sess]], cmap=color, extent=[begining, (begining + data_arrayS.end_frame[sess]) , 0, num_unit], origin='lower', aspect = 'auto')#,norm=LogNorm(vmin=np.nanmin(data_array.values)+0.0001, vmax=np.nanmax(data_array.values)))\n",
+    "    \n",
+    "    begining = begining + data_arrayS.end_frame[sess] +1\n",
+    "    \n",
+    "ax.set_xlim(0, begining)\n",
+    "plt.xlabel('Time (min)')\n",
     "plt.ylabel('Units')\n",
     "plt.gca().spines['top'].set_visible(False)  # Hides the top spine\n",
-    "plt.gca().spines['right'].set_visible(False)  # Hides the right spine"
+    "plt.gca().spines['right'].set_visible(False)  # Hides the right spine\n",
+    "\n",
+    "xticks = plt.gca().get_xticks()  # Get current y-axis tick values\n",
+    "plt.gca().set_xticklabels([f\"{int(tick *in_min)}\" for tick in xticks])\n",
+    "plt.savefig(os.path.join(dpath, \"S.png\"), format=\"png\", dpi=300)"
    ]
   },
   {
@@ -651,7 +736,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 498,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_arrayS = data_arrayS.assign_coords(session=[str(s) for s in data_arrayS.coords['session'].values])\n",
+    "data_arrayC = data_arrayC.assign_coords(session=[str(s) for s in data_arrayC.coords['session'].values])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,6 +754,25 @@
     "cents.to_pickle(os.path.join(dpath, \"cents.pkl\"))\n",
     "shiftds.to_netcdf(os.path.join(dpath, \"shiftds.nc\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_arrayS.name = \"S_all\"\n",
+    "data_arrayC.name = \"C_all\"\n",
+    "data_arrayS.to_netcdf(os.path.join(dpath, \"S_allSessions.nc\"))\n",
+    "data_arrayC.to_netcdf(os.path.join(dpath, \"C_allSessions.nc\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
